z-index fix

--- a/public/style.css
+++ b/public/style.css
@@ -17,7 +17,7 @@
   display: grid;
   grid-template-rows: 70px auto;
   
-  z-index: 1;
+  /* z-index: 1; */
   position: sticky;
   /* bottom: 300px; */
   top: 300px;
@@ -32,6 +32,7 @@
 
 }
 #Ratings {
+  z-index: -1;
   grid-row-start: 2;
   grid-row-end: 3;
   grid-column-start: 1;
@@ -47,5 +48,5 @@
   grid-row-end: 2;
   grid-column-start: 1;
   grid-column-end:3;
-  z-index:2;
+  /* z-index:1; */
 }
